--- a/Assignment_bulb.html
+++ b/Assignment_bulb.html
@@ -16,17 +16,17 @@
 <body>
 
       <button  onclick="turnon()">on</button>
-      <img id="bulb" src="/Asserts/bulboff.jpg">
+      <img id="bulb" src="Asserts/bulboff.jpg">
       <button  onclick="turnoff()">off</button><br>
       <script>
         function turnon()
         {
-            document.getElementById("bulb").src="/Asserts/bulb on.avif"
+            document.getElementById("bulb").src="Asserts/bulb on.avif"
         }
 
         function turnoff()
         {
-            document.getElementById("bulb").src="/Asserts/bulboff.jpg"
+            document.getElementById("bulb").src="Asserts/bulboff.jpg"
         }
       </script>
 
